Fix documentation typo mbsync -> syncup
This is an impressive mistake, honestly.

Signed-off-by: Alex Minghella <a@minghella.net>

--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@ syncup - synchronise a local maildir store with a remote
 
 == Synopsis
 
-*mbsync* [*-hv*] [*-C* _file_] [*-H* _path_] [*-c* _file_] _maildir-root_
+*syncup* [*-hv*] [*-C* _file_] [*-H* _path_] [*-c* _file_] _maildir-root_
 
 == Description
 
